<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="version">Power DocSearch version %s</string>
    <string name="link">© 2020 Power Explorer</string>
    <string name="icondesign">Icon designed by Non Miyabi</string>
    <string name="iconsite">Non\'s Illust Gallery</string>
    <string name="iconlink">http://sites.google.com/site/nonsillustgallery/</string>

    <string name="app_name">Power DocSearch</string>
    <string name="app_selector">Select directory</string>
    <string name="grep_spinner">Now searching…</string>
    <string name="grep_finished">Finished.</string>
    <string name="grep_canceled">Canceled.</string>

    <string name="multiselect_title">Select multiple files</string>
	<string name="pick_title">File and Folder Picker</string>

	<string name="label_dir">Files and Folders</string>
    <string name="label_ext">Extensions</string>
    <string name="label_re">Regular Expression</string>
    <string name="label_ignore_case">Ignore Case</string>
    <string name="label_adddir">Add Directory</string>
    <string name="label_addext">Add Extension</string>
    <string name="label_hint">Search word</string>
	<string name="newfile">New File</string>
    <string name="nofiles">No Files</string>
   
    <string name="label_OK">OK</string>
    <string name="label_CANCEL">Cancel</string>
    <string name="label_YES">Yes</string>
    <string name="label_NO">No</string>

    <string name="foreground_service_started">Service is in the foreground</string>

	<string name="label_remove_all_item_title">Remove all items</string>
    <string name="label_remove_item_title">Remove item</string>
    <string name="label_remove_item">%s\nAre you sure?</string>
<string name="label_remove_all_item">\nAre you sure?</string>

    <string name="label_no_target_dir">There is no target directory.\nPlease set target directory.</string>

    <string name="menu_viewer">View</string>

    <string name="progress">%1$s (in %2$d files)</string>

    <string name="label_unable_access">Unable Access…</string>
    <string name="label_long_press">LongPress to apply the directory.</string>

  <string name="label_option">Preferences</string>
  <string name="label_font_size">Font Size</string>
  <string name="label_highlight_fg">Highlight Text Color</string>
  <string name="label_highlight_bg">Highlight BG Color</string>
  <string name="label_no_extension">No ext.</string>

  <string name="label_add_linenumber">Send Intent with line number</string>
  <string name="summary_add_linenumber">If you open the file by Jota+/Jota Text Editor, automatically move the line.</string>

  <string name="label_copied">Copied to clipboard</string>
  <string name="color_picker_input">Input Color code</string>
  <string name="color_picker_hint">Enter 6-digit hexadecimal</string>
  
  <string name="spinner_1_lang_prompt">Language</string>

</resources>
